@@ -1,3 +1,8 @@
+2000-08-05  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Moved flags to objs.h.  Set 'okay_to_take' for containers and
+	their members.
+
 2000-08-04  Tristan Tarrant  <nadir@users.sourceforge.net>
 
 	* game.h, bggame.cc, sigame.cc: add some resources, namely palettes 
